--- a/config/application.yml
+++ b/config/application.yml
@@ -10,5 +10,5 @@
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 
-BASE_URL: "http://enlace-develop.herokuapp.com/" #
+BASE_URL: "enlace-develop.herokuapp.com/" #
 
