--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,11 @@
 AllCops:
   Exclude:
     - "vendor/**/*"
-    - "db/schema.rb"
+    - "db/**/*"
+    - "test/fixtures"
+    - "config/**/*"
+    - "bin/**/*"
+    - Rakefile
   UseCache: false
 Style/CollectionMethods:
   Description: Preferred collection methods.
@@ -114,7 +118,7 @@ Style/StringLiteralsInInterpolation:
   SupportedStyles:
   - single_quotes
   - double_quotes
-Style/TrailingComma:
+Style/TrailingCommaInLiteral:
   Description: Checks for trailing comma in parameter lists and literals.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-trailing-array-commas
   Enabled: false
