--- a/config/application.yml
+++ b/config/application.yml
@@ -9,6 +9,12 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
+production:
+  BASE_URL: "enlace-develop.herokuapp.com/" #
 
-BASE_URL: "enlace-develop.herokuapp.com/" #
+development:
+  BASE_URL: "http://localhost:3000/"
+
+test:
+  BASE_URL: "http://localhost:3000/"
 
